XO_Project_UAT/Project--XOGrp--UAT/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AccountLongestPastDueDate__c</fullName>
        <description>Stored the account&apos;s Longest Past Due Date</description>
        <label>Account Longest Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountPastDueAmount__c</fullName>
        <description>Store the Account&apos;s Past Due balance</description>
        <label>Account Past Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBP_In_House__c</fullName>
        <description>SS-5010</description>
        <label>CBP-In House</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promised Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Faith Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusal to Pay</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CBSS_Disposition_Code__c</fullName>
        <description>Disposition Code for the CBSS team</description>
        <inlineHelpText>Disposition Code for the CBSS team</inlineHelpText>
        <label>CBSS Disposition Code</label>
        <picklist>
            <picklistValues>
                <fullName>Disputing Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Information Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promise to Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested Manager/Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested to Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up Payment Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke with Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to Escalation Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Vendor Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Call</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CallDurationInHours__c</fullName>
        <description>SS-4828</description>
        <formula>CallDurationInSeconds/3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CallDurationInHours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallDurationInMinutes__c</fullName>
        <description>SS-4828</description>
        <formula>CallDurationInSeconds/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CallDurationInMinutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Purpose__c</fullName>
        <label>Call Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity F/U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CasesafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Casesafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claiming_Task_Type__c</fullName>
        <defaultValue>&apos;Others&apos;</defaultValue>
        <description>CSP-2558</description>
        <label>Claiming Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Claiming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Claiming Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/ Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delete_After_Due_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the task is not completed by the end of the due date, it is deleted automatically.</inlineHelpText>
        <label>Delete After Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disposition_Code__c</fullName>
        <formula>TEXT(
If(TEXT(Local_AE_Disposition_Code__c)=&quot;&quot;,0,1)+
If(TEXT(CBSS_Disposition_Code__c)=&quot;&quot;,0,1)+
If(TEXT(Strategy_Specialist_Disposition_Code__c)=&quot;&quot;,0,1)+
If(TEXT(Inbound_Disposition__c)=&quot;&quot;,0,1)
)
&amp;
&quot;# &quot;
&amp;
If(TEXT(Local_AE_Disposition_Code__c)=&quot;&quot;,&quot;&quot;,&quot;&lt;AE: &quot;&amp; TEXT(Local_AE_Disposition_Code__c) &amp;&quot;&gt;&quot;)&amp;
If(TEXT(CBSS_Disposition_Code__c)=&quot;&quot;,&quot;&quot;,&quot;&lt;CBSS: &quot;&amp; TEXT(CBSS_Disposition_Code__c) &amp;&quot;&gt;&quot;)&amp;
If(TEXT(Strategy_Specialist_Disposition_Code__c)=&quot;&quot;,&quot;&quot;,&quot;&lt;SS: &quot;&amp; TEXT(Strategy_Specialist_Disposition_Code__c) &amp;&quot;&gt;&quot;)&amp;
If(TEXT(Inbound_Disposition__c)=&quot;&quot;,&quot;&quot;,&quot;&lt;IB: &quot;&amp; TEXT(Inbound_Disposition__c) &amp;&quot;&gt;&quot;)</formula>
        <label>Disposition Code Sum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispostition_Type__c</fullName>
        <description>This field will cover the type of Disposition Codes that the Strategy Specialist will be processing</description>
        <inlineHelpText>This field will cover the type of Disposition Codes that the Strategy Specialist will be processing</inlineHelpText>
        <label>Dispostition Type</label>
        <picklist>
            <picklistValues>
                <fullName>SS Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TK Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Purpose__c</fullName>
        <inlineHelpText>Choose the purpose for the communication</inlineHelpText>
        <label>Event Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>First Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_NVM_Recording_GUID__c</fullName>
        <description>This field is used to hold the NVM Call Record GUID when users within the system should not be allowed to listen to the recording from within Salesforce.</description>
        <externalId>true</externalId>
        <label>Hidden NVM Recording GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_Disposition__c</fullName>
        <description>SS-4831</description>
        <label>Inbound Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Transfer to TKPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to BDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Working</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InviteeUuid__c</fullName>
        <label>InviteeUuid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_AE_Disposition_Code__c</fullName>
        <description>Disposition Code for the Local Core Account Executives team</description>
        <inlineHelpText>Disposition Code for the Local Core Account Executives team</inlineHelpText>
        <label>Local AE Disposition Code</label>
        <picklist>
            <picklistValues>
                <fullName>Busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Live Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong/Bad Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect-Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Pitch Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Pitch Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sales Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Follow Up Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect - Live Pitch Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marked_for_Deletion__c</fullName>
        <formula>AND(NOT(IsClosed),Delete_After_Due_Date__c, TODAY() &gt; ActivityDate)</formula>
        <inlineHelpText>If the activity is to be deleted after the due date and has not been completed by the end of the due date, returns true</inlineHelpText>
        <label>Marked for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meeting_Category__c</fullName>
        <description>To fulfill CSP-1626, make the Registry / National team to categorize the meetings</description>
        <inlineHelpText>The Registry / National team could categorize the meetings</inlineHelpText>
        <label>Meeting Category</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallRingTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time between the agent&apos;s phone ringing and the agent answering the call. For Outbound, this is the time between the customer&apos;s phone ringing and the customer answering the call. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Ring Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CallTalkTimeInSeconds__c</fullName>
        <inlineHelpText>For Inbound, this is the time the customer spent connected to an agent. For Outbound, this is the time between the customer answering their phone and the call ending. This value is rounded to the nearest second.</inlineHelpText>
        <label>Call Talk Time (s)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__InteractionQuality__c</fullName>
        <label>Interaction Quality</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Was_Call_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Was Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__NVM_Agent__c</fullName>
        <formula>Owner:User.NVMContactWorld__NVM_Agent_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NVM Agent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVM_Notes__c</fullName>
        <label>NVM Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVM_Notes_hidden__c</fullName>
        <label>NVM Notes hidden</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NVM_Voicemail_Number__c</fullName>
        <description>This field will get filled in when a voice mail is created on the related task</description>
        <inlineHelpText>This field will get filled in when a voice mail is created on the related task</inlineHelpText>
        <label>NVM Voicemail Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboard_Automation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to define the task whether is created by onboarding case automation</description>
        <label>Onboard Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Date__c</fullName>
        <label>Onboarding Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Onboarding_Task_Outcome__c</fullName>
        <label>Onboarding Task Outcome</label>
        <picklist>
            <controllingField>Strategy_Specialist_Disposition_Code__c</controllingField>
            <picklistValues>
                <fullName>Aged Out of Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immediate Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Onboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Calendar Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory Storefront</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <inlineHelpText>Choose the purpose for the communication</inlineHelpText>
        <label>Task Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>First Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working on Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Ads (non-storefronts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storefront/Theknot.com/Planner App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions and Freemiums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Calc/PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tours, Concierge, TRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>ACTV-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Requested on SS-2771</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Specialist_Disposition_Code__c</fullName>
        <description>Dispostion codes for the Strategy Specialists</description>
        <inlineHelpText>Dispostion codes for the Strategy Specialists</inlineHelpText>
        <label>Service Disposition Code</label>
        <picklist>
            <controllingField>Dispostition_Type__c</controllingField>
            <picklistValues>
                <fullName>Asset Collection Call - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOW/HOF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bride/Groom assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create Freemium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log in assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing / Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Information Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC/Subscription Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spoke with Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storefront Re-design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storefront Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Issue - Internal Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKP Pro/Online Ad Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - non-TK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB – Baby Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB – Membership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskResourceType__c</fullName>
        <label>Task Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>VoiceMail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Recording</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Completion_Date__c</fullName>
        <description>This field is used to stamp the date and time that a Task status is moved to &quot;Completed&quot;</description>
        <label>Task Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Actions_Taken__c</fullName>
        <description>Actions taken by the recipient of an email (Sign Up, Enter Credit Card, Hits a button, Visits a particular page, etc).</description>
        <label>Tout Actions Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Campaign_Details__c</fullName>
        <description>A link to details around the Tout Campaign.</description>
        <label>Tout Campaign Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Campaign__c</fullName>
        <description>The name of the Tout Campaign that this email is a part of</description>
        <label>Tout Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email has clicked on links inside the email.</description>
        <label>Tout Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Details__c</fullName>
        <description>A link to more details around the Touted email.</description>
        <label>Tout Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Events_Tracked__c</fullName>
        <description># of Tout Engagement Events tracked around this email.</description>
        <label>Tout Events Tracked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Last_Event_At__c</fullName>
        <description>The last time someone viewed, clicked or engaged in any other way with this email.</description>
        <label>Tout Last Event At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Presentation_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a presentation included in this email was viewed.</description>
        <label>Tout Presentation Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied_At__c</fullName>
        <description>THe timestamp of when someone last replied to this email.</description>
        <label>Tout Replied At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Tout detected a response to this email.</description>
        <label>Tout Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Sent_By__c</fullName>
        <label>Tout Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template_Details__c</fullName>
        <description>A link to details around the Tout template.</description>
        <label>Tout Template Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Template__c</fullName>
        <description>The name of the Tout template used in this email.</description>
        <label>Tout Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToutApp__Tout_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recipient of the email viewed it.</description>
        <label>Tout Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Mirror_of_Standard_field__c</fullName>
        <description>This field is strictly used to mirror the info in the Standard Type field of an activity</description>
        <label>Type (Mirror of Standard field)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Call__c</fullName>
        <label>Type of Call</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event/Conference</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>